--- a/public/css/libs/styles.css
+++ b/public/css/libs/styles.css
@@ -2,7 +2,7 @@
 
 
 /****************User Profile  *********************/
-.user-row {
+/*.user-row {
     margin-bottom: 14px;
 }
 
@@ -34,4 +34,20 @@
 }
 .toppad
 {margin-top:20px;
+}*/
+
+/**************** Error *********************/
+
+.error-template {
+	padding: 40px 15px;
+	text-align: center;
+}
+
+.error-actions {
+	margin-top:15px;
+	margin-bottom:15px;
+}
+
+.error-actions .btn { 
+	margin-right:10px; 
 }
